@startuml Class diagram ViewModel
interface INotifyPropertyChanged

BaseViewModel ..|> INotifyPropertyChanged
abstract class BaseViewModel{
    + <<event>> PropertyChanged : PropertyChangedEventHandler

    # OnPropertyChanged(propertyName:string)
}

ComponentViewModel --|> BaseViewModel
abstract class ComponentViewModel{
    # dbContext : ApplicationContext
    # _viewSource : CollectionViewSource
    
    + GetViewSource() : ICollectionView

    {abstract} # ResetContext()
    {abstract} + Add()
    {abstract} + Edit(commandParameter:object)
    {abstract} + Remove(commandParameter:object)
}

MotherboardViewModel --|> ComponentViewModel
class MotherboardViewModel{
    + MotherboardViewModel()
    # ResetContext()
    + Add()
    + Edit(commandParameter:object)
    + Remove(commandParameter:object)
}

MainViewModel --|> BaseViewModel
MainViewModel *-- BaseViewModel
class MainViewModel{
    + CurrentViewModel : BaseViewModel

    + <<event>> NavigationCanceled : EventHandler

    - OnNavigationCancel()

    + NavigateConfigurations()
    + NavigateComponents()

}

ConfigurationsViewModel --|> BaseViewModel
class ConfigurationsViewModel{
    - dbContext : ApplicationContext
    - _viewSource : CollectionViewSource

    + SelectedConfiguration : ConfigurationViewModel

    + ConfigurationsViewModel(id:int)
    + GetViewSource() : ICollectionView
    + SelectConfiguration(commandParameter:object)
    + RemoveConfiguration(commandParameter:object)
    + ExportConfiguration(commandParameter:object)
    + AddConfiguration()
    + ImportConfiguration()
    + CreateConfiguration()
}

ConfigurationViewModel --* ConfigurationsViewModel
ConfigurationViewModel --|> BaseViewModel
class ConfigurationViewModel{
    - _configuration : Configuration
    - add : bool
    - dbContext : ApplicationContext

    + Errors : string[]
    + Changes : bool
    + Name : string
    + Motherboard : Motherboard
    + Cpu : Cpu
    + Cooler : Cooler
    + PowerSupply : PowerSupply
    + Rams : Ram[]
    + Gpus : Gpu[]
    + M2Ssds : M2SlotWithSsd[]
    + SsdsAndHdds : Component[]
    + <<event>> ConfigurationSaved : EventHandler
    + <<event>> ConfigurationSaved : EventHandler<object>

    - OnSave()
    - OnArrayChange(array:object)
    + ConfigurationViewModel(configuration:Configuration, 
    context:ApplicationContext, add : bool)
    + Save()
    + CreateConfiguration(configuration:Configuration)
    + GetConfiguration() : Configuration
    + CheckCompatibility()
    + ChangeMotherboard()
    + ChangeCpu()
    + ChangeColor()
    + ChangePowerSupply()
    + ChangeRam(commandParameter:object)
    + ChangeGpu(commandParameter:object)
    + ChangeSata(commandParameter:object)
    + ChangeSsd(commandParameter:object)
    + ChangeHdd(commandParameter:object)
    + ChangeM2Ssd(commandParameter:object)
    + AfterMotherboardChange()
}

ComponentsViewModel *-- ComponentViewModel
ComponentsViewModel --|> BaseViewModel
class ComponentsViewModel{
    - CurrentViewModel : ComponentViewModel

    + NavigateMotherboard()
    + NavigateCpu()
    + NavigateCooler()
    + NavigateRam()
    + NavigatePowerSupply()
    + NavigateGpu()
    + NavigateSsd()
    + NavigateHdd()
    + NavigateM2Ssd()
    + NavigateSocket()
}

@enduml